@@ -1,0 +1,3 @@
+if mods["SchallCircuitGroup"] then
+  data.raw.item["simple-gauge"].subgroup = "circuit-input"
+end
